# EncipherX

./: Cargo.toml  README.md  encrypted.txt  error_log.txt
src/: main.rs
